# PeleC

./: .buildinfo  .clang-format  .clang-tidy  .codespell-ignore-words  .codespellrc  .gitattributes  .gitignore  .gitmodules  .travis.yml  Algorithms.html  BoundaryConditions.html  BoxlibBits.html  Building.html  CMakeLists.txt  CTestConfig.cmake  Equations.html  GettingStarted.html  InputFiles.html  Introduction.html  LES.html  PelePhysics.html  README.rst  Testing.html  Tutorials.html  VandV.html  build.sh  genindex.html  index.html  license.txt  objects.inv  search.html  searchindex.js
Docs/: .gitignore  CMakeLists.txt  Doxyfile.breathe.in  Doxyfile.in
Docs/doxygen/: Doxyfile.in
Docs/sphinx/: Algorithms.rst  BoundaryConditions.rst  BoxlibBits.rst  Building.rst  Equations.rst  GettingStarted.rst  InputFiles.rst  Introduction.rst  LES.rst  Makefile  PelePhysics.rst  Testing.rst  VandV.rst  conf.py  index.rst  make.bat
Docs/sphinx/ebverification/: ebverification.rst
Docs/sphinx/geometry/: EB.rst  geometry_init.rst
Docs/sphinx/validation/: validation.rst
Docs/sphinx/verification/: verification.rst
Docs/sphinx_doc/: Algorithms.rst  BoundaryConditions.rst  EB.rst  Equations.rst  GettingStarted.rst  InputFiles.rst  Introduction.rst  LES.rst  PeleC_doxygen.rst  PelePhysics.rst  VandV.rst  boxlib_bits.rst  building.rst  conf.py  index.rst  testing.rst  tutorials.rst  writing_documentation.rst
Docs/sphinx_doc/ebverification/: ebverification.rst
Docs/sphinx_doc/geometry/: EB.rst  amrex_geometry.rst  geometry.rst  geometry_creation.rst  geometry_init.rst
Docs/sphinx_doc/miscellaneous/: kgen.rst  miscellaneous.rst
Docs/sphinx_doc/validation/: validation.rst
Docs/sphinx_doc/verification/: verification.rst
Exec/RegTests/: CMakeLists.txt  README.rst
Exec/RegTests/AuxQuantities/: CMakeLists.txt  GNUmakefile  README.md  auxquantities.inp  auxquantities_eb.inp  prob.H  prob.cpp  prob_parm.H
Exec/RegTests/ChannelFlow/: CMakeLists.txt  GNUmakefile  README.md  channel-1.inp  example.inp  prob.H  prob.cpp  prob_parm.H
Exec/RegTests/EB-BluffBody/: GNUmakefile  eb-bluffbody-1.inp  example.inp  inputs_ex  prob.H  prob.cpp  prob_parm.H
Exec/RegTests/EB-C1/: GNUmakefile  README.md  eb-symmetry-plm.inp  (+7 more)
Exec/UnitTests/: AmrexTestEnv.H  CMakeLists.txt  prob.H  prob.cpp  prob_parm.H  test-config.cpp  unit-tests-main.cpp
ExecCpp/UnitTests/: AmrexTestEnv.H  CMakeLists.txt  prob.H  prob.cpp  prob_parm.H  test-config.cpp  unit-tests-main.cpp
Source/: Advance.cpp  BCfill.cpp  Bld.cpp  CMakeLists.txt  Constants.H  Derive.H  Derive.cpp  Derive_F.H  Diffterm.H  Diffterm.cpp  Diffusion.H  Diffusion.cpp  EB.H  EB.cpp  EBLeastSquares.H  EBStencilTypes.H  EBStencilTypes_mod.F90  External.cpp  Filter.H  Filter.cpp  Filter_F.H  Forcing.cpp  Geometry.H  Geometry.cpp  Godunov.H  Godunov.cpp  GradUtil.H  GradUtil.cpp  Hydro.H  Hydro.cpp  IO.H  IO.cpp  IndexDefines.H  IndexDefines.cpp  InitEB.cpp  LES.H  LES.cpp  MMS.cpp  MOL.H  MOL.cpp  (+62 more)
Source/Params/: _cpp_parameters  parse_pelec_params.py
Source/Redistribution/: Make.package  iamr_create_itracker_1d.cpp  iamr_create_itracker_2d.cpp  iamr_create_itracker_3d.cpp  iamr_merge_redistribute.cpp  iamr_redistribution.H  iamr_redistribution.cpp  iamr_state_redistribute.cpp
Source/Spray/: particle_mod.f90
Source/Src_1d/: Make.package  PeleC_1d.F90  PeleC_advection_1d.F90  advection_util_1d.f90  diffterm_1d.f90  diffterm_nonideal_1d.f90  filter_1d.f90  impose_NSCBC_1d.f90  lesterm_1d.f90  ppm_1d.f90  riemann_1d.F90  set_bc_mask_1d.f90  slope_1d.f90  trace_1d.f90  trace_ppm_1d.f90
Source/Src_2d/: Hyp_pele_MOL_2d.F90  Make.package  PeleC_2d.F90  PeleC_advection_2d.F90  PeleC_init_eb_2d.F90  PeleC_init_eb_2d.f90  TODO  advection_util_2d.f90  diffterm_2d.f90  diffterm_nonideal_2d.f90  filter_2d.f90  grad_utils_2d.F90  impose_NSCBC_2d.F90  impose_NSCBC_2d.f90  impose_NSCBC_mixed_BC_2d.f90  impose_NSCBC_with_perio_2d.f90  lesterm_2d.f90  ppm_2d.f90  riemann_2d.F90  set_bc_mask_2d.f90  slope_2d.f90  slope_mol_2d_EB.f90  trace_2d.f90  trace_ppm_2d.f90  trans_2d.F90
Source/Src_3d/: Hyp_pele_MOL_3d.F90  Make.package  PeleC_3d.F90  PeleC_advection_3d.F90  PeleC_init_eb_3d.F90  PeleC_init_eb_3d.f90  PeleC_mol_3d.F90  advection_util_3d.f90  diffterm_3d.f90  diffterm_nonideal_3d.f90  filter_3d.f90  grad_utils_3d.F90  impose_NSCBC_3d.F90  impose_NSCBC_3d.f90  lesterm_3d.f90  ppm_3d.f90  riemann_3d.F90  set_bc_mask_3d.f90  slope_3d.f90  slope_mol_3d.f90  slope_mol_3d_EB.f90  trace_3d.f90  trace_ppm_3d.f90  trans_3d.F90
Source/Src_nd/: Derive_nd.F90  Derive_nd.f90  Diffusion_nd.f90  Make.package  PeleC_nd.F90  PeleC_util.F90  Prob_nd.F90  React_nd.F90  Tagging_nd.f90  advection_util_nd.F90  bc_fill_nd.F90  bc_normal_nscbc.f90  ext_src_nd.f90  flatten_nd.F90  forcing_src_nd.F90  interpolate.f90  meth_params.F90  meth_params.template  mms_src_nd.F90  parmparse_fi.cpp  parmparse_mod.f90  prob_params.f90  problem_derive_nd.F90  riemann_util.f90  rk_params.f90  string_mod.f90  sums_nd.f90  timestep.F90  weno.f90
Source/TurbInflow/: Make.package  turbinflow.cpp  turbinflow_f.f90
Source/param_includes/: Make.package  pelec_defaults.H  pelec_params.H  pelec_queries.H
SourceCpp/: Advance.cpp  BCfill.cpp  Bld.cpp  CMakeLists.txt  ConstantTransport.H  Constants.H  Derive.H  Derive.cpp  Diffterm.H  Diffterm.cpp  Diffusion.H  Diffusion.cpp  EB.H  EB.cpp  EBStencilTypes.H  EOS.H  EOS_FUEGO.cpp  EOS_GAMMA.H  EOS_GAMMA.cpp  External.cpp  Filter.H  Filter.cpp  Forcing.H  Forcing.cpp  Godunov.H  Godunov.cpp  GradUtil.H  GradUtil.cpp  Hydro.H  Hydro.cpp  IO.H  IO.cpp  IndexDefines.H  IndexDefines.cpp  InitEB.cpp  LES.H  LES.cpp  MMS.cpp  MOL.H  MOL.cpp  (+30 more)
SourceCpp/Chemistry/: CMakeLists.txt
SourceCpp/Params/: CMakeLists.txt  _cpp_parameters  mk_params.sh  parse_pelec_params.py
Tests/: CMakeLists.txt  CTestCustom.cmake  CTestNightlyScript.cmake  fextrema_compare.py  test_second_order.py
TestsCpp/: CMakeLists.txt  CTestList.cmake  CTestNightlyScript.cmake
TestsCpp/unit_tests/: AmrexTestEnv.H  CMakeLists.txt  test-config.C  unit-tests-3d.C  unit-tests-main.C
(+1595 files in other folders)
