add_subdirectory(HIT)
add_subdirectory(MultiSpecSod)
add_subdirectory(PMF)
add_subdirectory(PMF-SRK)
add_subdirectory(Sedov)
add_subdirectory(Shu-Osher)
add_subdirectory(Sod)
add_subdirectory(ChannelFlow)
add_subdirectory(TG)
add_subdirectory(zeroD)

if(PELEC_ENABLE_AMREX_PARTICLES)
  add_subdirectory(Spray-Conv)
endif()

add_subdirectory(EB-C3)
add_subdirectory(EB-C4-5)
add_subdirectory(EB-C9)
add_subdirectory(EB-C10)
add_subdirectory(EB-C11)
add_subdirectory(EB-C12)
#add_subdirectory(EB-C14)
add_subdirectory(EB-ConvergingNozzle)
add_subdirectory(Soot-Flame)
if(PELEC_DIM GREATER 2)
  add_subdirectory(EB-C7)
  add_subdirectory(EB-C8)
  add_subdirectory(EB-BluffBody)
  add_subdirectory(EB-Plane)
endif()
if(PELEC_ENABLE_MASA)
  add_subdirectory(MMS)
  add_subdirectory(EB-C1)
endif()
