add_subdirectory(HIT)
add_subdirectory(MultiSpecSod)
add_subdirectory(PMF)
add_subdirectory(PMF-SRK)
add_subdirectory(Sedov)
add_subdirectory(Shu-Osher)
add_subdirectory(Sod)
add_subdirectory(ChannelFlow)
add_subdirectory(TG)
add_subdirectory(TGReact)
add_subdirectory(zeroD)
add_subdirectory(MassCons)

if(PELE_ENABLE_PARTICLES)
  add_subdirectory(Spray-Conv)
  if(NOT PELE_EXCLUDE_BUILD_IN_CI)
    add_subdirectory(Spray-A-Wbreakup)
    add_subdirectory(Spray-EB)
    add_subdirectory(Spray-Evaporation)
    add_subdirectory(Spray-Jet)
    add_subdirectory(Spray-Multijet)
    add_subdirectory(Spray-TG)
  endif()
endif()

add_subdirectory(EB-C3)
add_subdirectory(EB-C4-5)
add_subdirectory(EB-C9)
add_subdirectory(EB-C10)
add_subdirectory(EB-C11)
add_subdirectory(EB-C12)
add_subdirectory(EB-ConvergingNozzle)
add_subdirectory(EB-InflowBC)
add_subdirectory(Soot-ZeroD)
if(NOT PELE_EXCLUDE_BUILD_IN_CI)
  add_subdirectory(Soot-Flame)
endif()
if(PELE_DIM EQUAL 2)
  add_subdirectory(EB-FlowPastCylinder)
  add_subdirectory(AuxQuantities)
endif()
if(PELE_DIM EQUAL 3)
  add_subdirectory(EB-C7)
  add_subdirectory(EB-C8)
  add_subdirectory(EB-BluffBody)
  add_subdirectory(EB-TaylorCouette)
  add_subdirectory(EB-Rotor4Blade)
endif()
if(PELE_ENABLE_MASA)
  add_subdirectory(MMS)
  add_subdirectory(EB-C1)
endif()
